added validation and more openapi
